# ros_lecture_demo

./: README.md
docker/: Dockerfile  build_docker.bash  docker-compose.yaml  ros_entrypoint.sh
src/lecture_demo/: CMakeLists.txt  package.xml
src/lecture_demo/lecture_demo/: demo_publisher.py
